# -

./: 2024-1 dAiv 이미지분류 특강.ipynb  2024-1 dAiv 이미지분류 특강.pptx  README.md  pyproject.toml
poster/2024-1 dAiv 이미지분류 특강/: poster.pptx
src/tensordaiv/: __init__.py
src/tensordaiv/nn/: __init__.py
